apps/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: envoy-gateway-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  gatewayClassName: eg
  listeners:
    - name: https
      allowedRoutes:
        namespaces:
          from: All
      protocol: HTTPS
      hostname: "*.talos.froystein.jp"
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: eg-https
